--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 export(backupSimulation)
 export(createCluster)
+export(createLink)
 export(filteringOptions)
 export(initializeArea)
 export(nodalOptimizationOptions)
 export(prepSimulationWV)
+export(propertiesLink)
 export(removeArea)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
+importFrom(assertthat,assert_that)
 importFrom(stats,setNames)
 importFrom(utils,read.table)
 importFrom(utils,tar)
