--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(nodalOptimizationOptions)
 export(prepSimulationWV)
 export(propertiesLink)
 export(removeArea)
+export(removeCluster)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
