--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(prepSimulationWV)
 export(propertiesLink)
 export(removeArea)
 export(removeCluster)
+export(removeLink)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
