--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(filteringOptions)
 export(initializeArea)
 export(nodalOptimizationOptions)
 export(prepSimulationWV)
-export(propertiesLink)
+export(propertiesLinkOptions)
 export(removeArea)
 export(removeCluster)
 export(removeLink)
