--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(nodalOptimizationOptions)
 export(prepSimulationWV)
 export(propertiesLinkOptions)
 export(removeArea)
+export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
 importFrom(antaresRead,setSimulationPath)
