--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Depends: antaresRead
-Imports: assertthat
+Imports: assertthat,
+    grDevices
 Suggests: testthat
