--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(createCluster)
 export(createLink)
 export(filteringOptions)
 export(nodalOptimizationOptions)
-export(prepSimulationWV)
 export(propertiesLinkOptions)
 export(removeArea)
 export(removeBindingConstraint)
@@ -17,6 +16,7 @@ export(removeLink)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
+importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
 importFrom(utils,read.table)
 importFrom(utils,tar)
