--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
+importFrom(antaresRead,getLinks)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
