--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(createArea)
 export(createBindingConstraint)
 export(createCluster)
 export(createLink)
+export(dicoGeneralSettings)
 export(filteringOptions)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
@@ -13,12 +14,14 @@ export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
+export(updateGeneralSettings)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
 importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
+importFrom(utils,modifyList)
 importFrom(utils,read.table)
 importFrom(utils,tar)
 importFrom(utils,type.convert)
