export readIni and writeIni

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,13 @@ export(dicoGeneralSettings)
 export(filteringOptions)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
+export(readIniFile)
 export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
 export(updateGeneralSettings)
+export(writeIni)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
