add create district

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(checkRemovedArea)
 export(createArea)
 export(createBindingConstraint)
 export(createCluster)
+export(createDistrict)
 export(createLink)
 export(dicoGeneralSettings)
 export(filteringOptions)
