--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
+export(runSimulation)
 export(updateGeneralSettings)
 export(writeIni)
 importFrom(antaresRead,getLinks)
