set solver path

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
 export(runSimulation)
+export(setSolverPath)
 export(updateGeneralSettings)
 export(writeIni)
 importFrom(antaresRead,getLinks)
