--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(createCluster)
 export(createDistrict)
 export(createLink)
 export(dicoGeneralSettings)
+export(dicoOptimizationSettings)
 export(filteringOptions)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
@@ -18,6 +19,7 @@ export(removeCluster)
 export(removeLink)
 export(runSimulation)
 export(setSolverPath)
+export(updatOptimizationSettings)
 export(updateGeneralSettings)
 export(writeIni)
 importFrom(antaresRead,getLinks)
