--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(createLink)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(filteringOptions)
+export(getPlaylist)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
 export(readIniFile)
@@ -18,6 +19,7 @@ export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
 export(runSimulation)
+export(setPlaylist)
 export(setSolverPath)
 export(updateGeneralSettings)
 export(updateOptimizationSettings)
