--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: antaresEditObject
 Type: Package
 Title: Edit an 'Antares' simulation
-Version: 0.1.2
+Version: 0.1.2.900
 Authors@R: c(
-    person("Victor", "Perrier", email = "victor.perrier@rte-france.com", role = c("aut", "cre")),
+    person("Victor", "Perrier", email = "victor.perrier@dreamRs.fr", role = c("aut")),
+    person("RTE-ANTARES-RPACKAGE", "", email = "rte-antares-rpackage@rte-france.com", role = c("aut", "cre")),
+    person("Baptiste", "Seguinot", email = "baptiste.seguinot@rte-france.com", role = "ctb"),
+    person("Benoit", "Thieurmel", email = "benoit.thieurmel@datastorm.fr", role = "ctb"),
+    person("Titouan", "Robert", email = "titouan.robert@datastorm.fr", role = "ctb"),
     person("RTE", role = "cph"))
-Maintainer: BREANT Frederic <frederic.breant@rte-france.com>
 Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal clusters or binding constraints.
 License: GPL (>= 2) | file LICENSE
 Encoding: UTF-8
