added editCluster function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(createDistrict)
 export(createLink)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
+export(editCluster)
 export(filteringOptions)
 export(getPlaylist)
 export(nodalOptimizationOptions)
