remove bc when removing area

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(updateGeneralSettings)
 export(updateOptimizationSettings)
 export(writeIni)
 importFrom(antaresRead,getLinks)
+importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
