--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(createLink)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editCluster)
+export(editLink)
 export(filteringOptions)
 export(getPlaylist)
 export(nodalOptimizationOptions)
