--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,21 +16,28 @@ export(getPlaylist)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
 export(readIniFile)
+export(readScenarioBuilder)
 export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
 export(runSimulation)
+export(scenarioBuilder)
 export(setPlaylist)
 export(setSolverPath)
 export(updateGeneralSettings)
 export(updateOptimizationSettings)
+export(updateScenarioBuilder)
 export(writeIni)
+importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
+importFrom(data.table,":=")
+importFrom(data.table,as.data.table)
+importFrom(data.table,melt)
 importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
 importFrom(utils,modifyList)
