add createPSP() and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(createBindingConstraint)
 export(createCluster)
 export(createDistrict)
 export(createLink)
+export(createPSP)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editCluster)
@@ -32,6 +33,7 @@ export(writeIni)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
+importFrom(antaresRead,readLayout)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
