add editPSP() and getCapacityPSP()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,9 @@ export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editCluster)
 export(editLink)
+export(editPSP)
 export(filteringOptions)
+export(getCapacityPSP)
 export(getPlaylist)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
