add createDSR(), editDSR() and getCapacityDSR()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,18 @@ export(checkRemovedArea)
 export(createArea)
 export(createBindingConstraint)
 export(createCluster)
+export(createDSR)
 export(createDistrict)
 export(createLink)
 export(createPSP)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editCluster)
+export(editDSR)
 export(editLink)
 export(editPSP)
 export(filteringOptions)
+export(getCapacityDSR)
 export(getCapacityPSP)
 export(getPlaylist)
 export(nodalOptimizationOptions)
