--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(createDSR)
 export(createDistrict)
 export(createLink)
 export(createPSP)
+export(createStudy)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editCluster)
@@ -52,3 +53,4 @@ importFrom(utils,read.table)
 importFrom(utils,tar)
 importFrom(utils,type.convert)
 importFrom(utils,write.table)
+importFrom(whisker,whisker.render)
