--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: antaresEditObject
 Type: Package
-Title: Edit an 'Antares' simulation
-Version: 0.1.2.990
+Title: Edit an 'Antares' Simulation
+Version: 0.1.3
 Authors@R: c(
     person("Victor", "Perrier", email = "victor.perrier@dreamRs.fr", role = c("aut", "cre")),
     person("Baptiste", "Seguinot", email = "baptiste.seguinot@rte-france.com", role = "ctb"),
@@ -9,7 +9,8 @@ Authors@R: c(
     person("Titouan", "Robert", email = "titouan.robert@datastorm.fr", role = "ctb"),
     person("Jalal-Edine", "Zawam", email = "jalal-edine.zawam@rte-france.com", role = "ctb"),
     person("RTE", role = "cph"))
-Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal clusters or binding constraints.
+Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal
+    clusters or binding constraints or edit existing ones. Update 'Antares' general & optimization settings.
 License: GPL (>= 2) | file LICENSE
 Encoding: UTF-8
 LazyData: true
