--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(removeBindingConstraint)
 export(removeCluster)
 export(removeLink)
 export(runSimulation)
+export(runTsGenerator)
 export(scenarioBuilder)
 export(setPlaylist)
 export(setSolverPath)
