--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: antaresEditObject
 Type: Package
 Title: Edit an 'Antares' Simulation
-Version: 0.1.4
+Version: 0.1.5
 Authors@R: c(
     person("Frederic", "Breant", email = "frederic.breant@rte-france.com", role = c("aut", "cre")),
-    person("Victor", "Perrier", email = "victor.perrier@dreamRs.fr", role = "aut"),
+    person("Victor", "Perrier", email = "victor.perrier@dreamRs.fr", role = c("aut")),
     person("Baptiste", "Seguinot", email = "baptiste.seguinot@rte-france.com", role = "ctb"),
     person("Benoit", "Thieurmel", email = "benoit.thieurmel@datastorm.fr", role = "ctb"),
     person("Titouan", "Robert", email = "titouan.robert@datastorm.fr", role = "ctb"),
@@ -12,6 +12,7 @@ Authors@R: c(
     person("RTE", role = "cph"))
 Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal
     clusters or binding constraints or edit existing ones. Update 'Antares' general & optimization settings.
+    'Antares' is an open source power system generator, more information are available here : <https://antares-simulator.org/>.
 License: GPL (>= 2) | file LICENSE
 Encoding: UTF-8
 LazyData: true
