--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(scenarioBuilder)
 export(setPlaylist)
 export(setSolverPath)
 export(updateGeneralSettings)
+export(updateInputSettings)
 export(updateOptimizationSettings)
 export(updateScenarioBuilder)
 export(writeIni)
