Added new function writeWaterValues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(updateInputSettings)
 export(updateOptimizationSettings)
 export(updateScenarioBuilder)
 export(writeIni)
+export(writeWaterValues)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
@@ -47,6 +48,8 @@ importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,melt)
 importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
