--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,5 +54,6 @@ importFrom(utils,modifyList)
 importFrom(utils,read.table)
 importFrom(utils,tar)
 importFrom(utils,type.convert)
+importFrom(utils,unzip)
 importFrom(utils,write.table)
 importFrom(whisker,whisker.render)
