export check antares version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(filteringOptions)
 export(getCapacityDSR)
 export(getCapacityPSP)
 export(getPlaylist)
+export(is_antares_v7)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
 export(readIniFile)
