--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: antaresEditObject
 Type: Package
 Title: Edit an 'Antares' Simulation
-Version: 0.1.6.900
+Version: 0.1.7
 Authors@R: c(
-    person("Frederic", "Breant", email = "frederic.breant@rte-france.com", role = c("aut", "cre")),
-    person("Victor", "Perrier", email = "victor.perrier@dreamRs.fr", role = c("aut")),
+    person("Frederic", "Breant", email = "frederic.breant@rte-france.com", role = c("aut")),
+    person("Victor", "Perrier", email = "victor.perrier@dreamRs.fr", role = c("aut", "cre")),
     person("Baptiste", "Seguinot", email = "baptiste.seguinot@rte-france.com", role = "ctb"),
     person("Benoit", "Thieurmel", email = "benoit.thieurmel@datastorm.fr", role = "ctb"),
     person("Titouan", "Robert", email = "titouan.robert@datastorm.fr", role = "ctb"),
