New function updateOutputSettings()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(setSolverPath)
 export(updateGeneralSettings)
 export(updateInputSettings)
 export(updateOptimizationSettings)
+export(updateOutputSettings)
 export(updateScenarioBuilder)
 export(writeIni)
 export(writeWaterValues)
