New function writeSeriesPrepro()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(updateOptimizationSettings)
 export(updateOutputSettings)
 export(updateScenarioBuilder)
 export(writeIni)
+export(writeSeriesPrepro)
 export(writeWaterValues)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
@@ -52,6 +53,8 @@ importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
+importFrom(data.table,fread)
+importFrom(data.table,fwrite)
 importFrom(data.table,melt)
 importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
