New function writeInputTS()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(updateOptimizationSettings)
 export(updateOutputSettings)
 export(updateScenarioBuilder)
 export(writeIni)
+export(writeInputTS)
 export(writeSeriesPrepro)
 export(writeWaterValues)
 importFrom(antaresRead,getAreas)
