Added docs for writeEconomicOptions()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(updateInputSettings)
 export(updateOptimizationSettings)
 export(updateOutputSettings)
 export(updateScenarioBuilder)
+export(writeEconomicOptions)
 export(writeIni)
 export(writeInputTS)
 export(writeSeriesPrepro)
