Fixed NOTE in CHECK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,11 +47,13 @@ export(writeWaterValues)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
+importFrom(antaresRead,readClusterDesc)
 importFrom(antaresRead,readLayout)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
 importFrom(data.table,":=")
+importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
