--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: antaresEditObject
 Type: Package
 Title: Edit an 'Antares' Simulation
-Version: 0.1.9
+Version: 0.1.9.900
 Authors@R: c(
     person("Veronique", "Bachelier", email = "veronique.bachelier@rte-france.com", role = c("aut", "cre")),
     person("Frederic", "Breant", role = "aut"),
@@ -11,6 +11,7 @@ Authors@R: c(
     person("Titouan", "Robert", role = "ctb"),
     person("Jalal-Edine", "Zawam", role = "ctb"),
     person("Etienne", "Sanchez", role = "ctb"),
+    person("Janus", "De Bondt", role = "ctb"),
     person("RTE", role = "cph"))
 Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal
     clusters or binding constraints or edit existing ones. Update 'Antares' general & optimization settings.
@@ -18,7 +19,7 @@ Description: Edit an 'Antares' simulation before running it : create new areas, 
 License: GPL (>= 2) | file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Depends: antaresRead
 Imports: 
     assertthat,
