--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ export(writeIni)
 export(writeInputTS)
 export(writeSeriesPrepro)
 export(writeWaterValues)
+export(write_area_output_values)
+export(write_link_output_values)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
