--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(writeSeriesPrepro)
 export(writeWaterValues)
 export(write_area_output_values)
 export(write_link_output_values)
+import(fs)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
