add aggregate hourly -> others timestamp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(backupStudy)
 export(checkRemovedArea)
+export(computeTimeStampFromHourly)
 export(copyOputput)
 export(createArea)
 export(createBindingConstraint)
@@ -47,7 +48,10 @@ export(writeSeriesPrepro)
 export(writeWaterValues)
 export(write_area_output_values)
 export(write_link_output_values)
+import(doParallel)
 import(fs)
+import(parallel)
+import(pbapply)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
