--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,10 @@ Imports:
     grDevices,
     data.table,
     whisker,
-    fs
+    fs,
+    doParallel,
+    pbapply,
+    parallel
 Suggests: 
     testthat,
     covr,
