--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(data.table,dcast)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,melt)
+importFrom(data.table,setcolorder)
 importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
 importFrom(utils,modifyList)
