--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,11 @@ importFrom(data.table,dcast)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,melt)
+importFrom(data.table,month)
 importFrom(data.table,setcolorder)
+importFrom(data.table,setnames)
+importFrom(data.table,yday)
+importFrom(data.table,year)
 importFrom(grDevices,col2rgb)
 importFrom(stats,setNames)
 importFrom(utils,modifyList)
