build general function for write

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,8 +48,7 @@ export(writeIni)
 export(writeInputTS)
 export(writeSeriesPrepro)
 export(writeWaterValues)
-export(write_area_output_values)
-export(write_link_output_values)
+export(write_output_values)
 import(data.table)
 import(doParallel)
 import(fs)
