--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(aggregateResult)
 export(backupStudy)
 export(checkRemovedArea)
 export(computeTimeStampFromHourly)
-export(copyOputput)
+export(copyOutput)
 export(createArea)
 export(createBindingConstraint)
 export(createCluster)
