--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(createPSP)
 export(createStudy)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
+export(editArea)
+export(editBindingConstraint)
 export(editCluster)
 export(editDSR)
 export(editLink)
