--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(getCapacityPSP)
 export(getPlaylist)
 export(is_antares_v7)
 export(nodalOptimizationOptions)
-export(parallelAggregMcall)
+export(parAggregateMCall)
 export(propertiesLinkOptions)
 export(readIniFile)
 export(readScenarioBuilder)
@@ -48,9 +48,9 @@ export(updateScenarioBuilder)
 export(writeEconomicOptions)
 export(writeIni)
 export(writeInputTS)
+export(writeOutputValues)
 export(writeSeriesPrepro)
 export(writeWaterValues)
-export(write_output_values)
 import(data.table)
 import(doParallel)
 import(fs)
