--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,9 +52,10 @@ export(writeWaterValues)
 import(doParallel)
 import(fs)
 import(parallel)
-import(pbapply)
 importFrom(antaresRead,getAreas)
+importFrom(antaresRead,getIdCols)
 importFrom(antaresRead,getLinks)
+importFrom(antaresRead,readAntares)
 importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
 importFrom(antaresRead,readLayout)
@@ -75,6 +76,10 @@ importFrom(data.table,setnames)
 importFrom(data.table,yday)
 importFrom(data.table,year)
 importFrom(grDevices,col2rgb)
+importFrom(pbapply,pblapply)
+importFrom(pbapply,pboptions)
+importFrom(stats,as.formula)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(utils,modifyList)
 importFrom(utils,read.table)
