--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(copyOutput)
 export(createArea)
 export(createBindingConstraint)
 export(createCluster)
+export(createClusterRenewable)
 export(createDSR)
 export(createDistrict)
 export(createLink)
