added editClusterRenewable and removeClusterRenewable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(dicoOptimizationSettings)
 export(editArea)
 export(editBindingConstraint)
 export(editCluster)
+export(editClusterRenewable)
 export(editDSR)
 export(editLink)
 export(editPSP)
@@ -33,6 +34,7 @@ export(readScenarioBuilder)
 export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
+export(removeClusterRenewable)
 export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
