changed cluster RES functions names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(copyOutput)
 export(createArea)
 export(createBindingConstraint)
 export(createCluster)
-export(createClusterRenewable)
+export(createClusterRES)
 export(createDSR)
 export(createDistrict)
 export(createLink)
@@ -18,7 +18,7 @@ export(dicoOptimizationSettings)
 export(editArea)
 export(editBindingConstraint)
 export(editCluster)
-export(editClusterRenewable)
+export(editClusterRES)
 export(editDSR)
 export(editLink)
 export(editPSP)
@@ -34,7 +34,7 @@ export(readScenarioBuilder)
 export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
-export(removeClusterRenewable)
+export(removeClusterRES)
 export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
