--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ importFrom(stats,as.formula)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(utils,modifyList)
+importFrom(utils,packageVersion)
 importFrom(utils,read.table)
 importFrom(utils,tar)
 importFrom(utils,type.convert)
