--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,9 @@
-pandoc: 2.7.2
-pkgdown: 1.4.1
+pandoc: 2.11.4
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   antaresEditObject: antaresEditObject.html
+  renewables-energy-sources: renewables-energy-sources.html
+  scenario-builder: scenario-builder.html
+last_built: 2021-10-19T08:44Z
 
