scenario builder: complete missing sequences

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
 importFrom(data.table,":=")
 importFrom(data.table,.SD)
+importFrom(data.table,CJ)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
