--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,10 @@ Roxygen: list(markdown = TRUE)
 Depends: antaresRead (>= 2.2.7)
 Imports: 
     assertthat,
-    grDevices,
     data.table,
+    httr,
+    grDevices,
+    jsonlite,
     whisker,
     doParallel,
     pbapply,
