--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(createDistrict)
 export(createLink)
 export(createPSP)
 export(createStudy)
+export(createVariant)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editArea)
@@ -41,6 +42,7 @@ export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
 export(scenarioBuilder)
+export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
 export(updateGeneralSettings)
@@ -48,6 +50,7 @@ export(updateInputSettings)
 export(updateOptimizationSettings)
 export(updateOutputSettings)
 export(updateScenarioBuilder)
+export(useVariant)
 export(writeEconomicOptions)
 export(writeIni)
 export(writeInputTS)
@@ -80,6 +83,13 @@ importFrom(data.table,setnames)
 importFrom(data.table,yday)
 importFrom(data.table,year)
 importFrom(grDevices,col2rgb)
+importFrom(httr,GET)
+importFrom(httr,POST)
+importFrom(httr,accept_json)
+importFrom(httr,content)
+importFrom(httr,content_type_json)
+importFrom(httr,stop_for_status)
+importFrom(jsonlite,toJSON)
 importFrom(stats,as.formula)
 importFrom(stats,sd)
 importFrom(stats,setNames)
