--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,11 +27,12 @@ export(editDSR)
 export(editLink)
 export(editPSP)
 export(filteringOptions)
+export(getAPIcommands)
 export(getCapacityDSR)
 export(getCapacityPSP)
-export(getCommands)
 export(getPlaylist)
 export(is_antares_v7)
+export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
 export(readIniFile)
