--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ importFrom(utils,getFromNamespace)
 importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(utils,read.table)
+importFrom(utils,tail)
 importFrom(utils,tar)
 importFrom(utils,type.convert)
 importFrom(utils,unzip)
