--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(updateOptimizationSettings)
 export(updateOutputSettings)
 export(updateScenarioBuilder)
 export(useVariant)
+export(writeAPIcommands)
 export(writeEconomicOptions)
 export(writeIni)
 export(writeInputTS)
@@ -93,6 +94,7 @@ importFrom(httr,content)
 importFrom(httr,content_type_json)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,toJSON)
+importFrom(jsonlite,write_json)
 importFrom(stats,as.formula)
 importFrom(stats,sd)
 importFrom(stats,setNames)
