--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,10 @@ export(editDSR)
 export(editLink)
 export(editPSP)
 export(filteringOptions)
-export(getAPIcommands)
 export(getCapacityDSR)
 export(getCapacityPSP)
 export(getPlaylist)
+export(getVariantCommands)
 export(is_antares_v7)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
@@ -54,12 +54,12 @@ export(updateOptimizationSettings)
 export(updateOutputSettings)
 export(updateScenarioBuilder)
 export(useVariant)
-export(writeAPIcommands)
 export(writeEconomicOptions)
 export(writeIni)
 export(writeInputTS)
 export(writeOutputValues)
 export(writeSeriesPrepro)
+export(writeVariantCommands)
 export(writeWaterValues)
 import(doParallel)
 import(parallel)
@@ -87,8 +87,10 @@ importFrom(data.table,setnames)
 importFrom(data.table,yday)
 importFrom(data.table,year)
 importFrom(grDevices,col2rgb)
+importFrom(httr,DELETE)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,PUT)
 importFrom(httr,accept_json)
 importFrom(httr,content)
 importFrom(httr,content_type_json)
