init create links

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(httr,PUT)
 importFrom(httr,accept_json)
 importFrom(httr,content)
 importFrom(httr,content_type_json)
+importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
