--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ importFrom(stats,as.formula)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(utils,getFromNamespace)
+importFrom(utils,head)
 importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(utils,read.table)
