use token if present

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,PUT)
 importFrom(httr,accept_json)
+importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,content_type_json)
 importFrom(httr,status_code)
