--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(computeTimeStampFromHourly)
 export(copyOutput)
 export(createArea)
 export(createBindingConstraint)
+export(createBindingConstraintBulk)
 export(createCluster)
 export(createClusterRES)
 export(createDSR)
