updated createLink() to work with antares >= 820

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(getCapacityPSP)
 export(getPlaylist)
 export(getVariantCommands)
 export(is_antares_v7)
+export(is_antares_v820)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
