--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ importFrom(data.table,melt)
 importFrom(data.table,month)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
+importFrom(data.table,transpose)
 importFrom(data.table,yday)
 importFrom(data.table,year)
 importFrom(grDevices,col2rgb)
