--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(useVariant)
 export(writeEconomicOptions)
 export(writeIni)
 export(writeInputTS)
+export(writeMiscGen)
 export(writeOutputValues)
 export(writeSeriesPrepro)
 export(writeVariantCommands)
