added getJobLogs() and getJobs()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,antares.api.command)
 S3method(print,antares.api.commands)
+S3method(print,antares.api.logs)
 export(activateRES)
 export(backupStudy)
 export(checkRemovedArea)
@@ -31,6 +32,8 @@ export(editPSP)
 export(filteringOptions)
 export(getCapacityDSR)
 export(getCapacityPSP)
+export(getJobLogs)
+export(getJobs)
 export(getPlaylist)
 export(getVariantCommands)
 export(is_antares_v7)
@@ -86,6 +89,7 @@ importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,melt)
 importFrom(data.table,month)
+importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
 importFrom(data.table,transpose)
