--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
 export(scenarioBuilder)
+export(searchStudy)
 export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
