--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(createDistrict)
 export(createLink)
 export(createPSP)
 export(createStudy)
+export(createStudyAPI)
 export(createVariant)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
@@ -78,6 +79,7 @@ importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
 importFrom(antaresRead,readLayout)
 importFrom(antaresRead,setSimulationPath)
+importFrom(antaresRead,setSimulationPathAPI)
 importFrom(antaresRead,simOptions)
 importFrom(assertthat,assert_that)
 importFrom(data.table,":=")
