added readIni() and readIniAPI()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ export(is_antares_v820)
 export(mockSimulationAPI)
 export(nodalOptimizationOptions)
 export(propertiesLinkOptions)
+export(readIni)
+export(readIniAPI)
 export(readIniFile)
 export(readScenarioBuilder)
 export(removeArea)
