added write ini methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ export(updateScenarioBuilder)
 export(useVariant)
 export(writeEconomicOptions)
 export(writeIni)
+export(writeIniAPI)
+export(writeIniFile)
 export(writeInputTS)
 export(writeMiscGen)
 export(writeOutputValues)
