--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: 2.11.4
-pkgdown: 2.0.2
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   antaresEditObject: antaresEditObject.html
   api-variant-management: api-variant-management.html
   renewables-energy-sources: renewables-energy-sources.html
   scenario-builder: scenario-builder.html
-last_built: 2022-02-07T17:21Z
+last_built: 2022-08-02T11:47Z
 
