after clean + build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,antares.api.command)
 S3method(print,antares.api.commands)
 S3method(print,antares.api.logs)
 export(activateRES)
+export(adequacyOptions)
 export(backupStudy)
 export(checkRemovedArea)
 export(clearScenarioBuilder)
@@ -58,6 +59,7 @@ export(searchStudy)
 export(setAPImode)
 export(setPlaylist)
 export(setSolverPath)
+export(updateAdequacySettings)
 export(updateGeneralSettings)
 export(updateInputSettings)
 export(updateOptimizationSettings)
