import readIni functions from antaresRead

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,9 @@ importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
 importFrom(antaresRead,readClusterDesc)
+importFrom(antaresRead,readIni)
+importFrom(antaresRead,readIniAPI)
+importFrom(antaresRead,readIniFile)
 importFrom(antaresRead,readLayout)
 importFrom(antaresRead,setSimulationPath)
 importFrom(antaresRead,setSimulationPathAPI)
@@ -125,7 +128,6 @@ importFrom(utils,packageVersion)
 importFrom(utils,read.table)
 importFrom(utils,tail)
 importFrom(utils,tar)
-importFrom(utils,type.convert)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
 importFrom(whisker,whisker.render)
