--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,10 @@ export(writeWaterValues)
 import(doParallel)
 import(parallel)
 import(pbapply)
+importFrom(antaresRead,api_delete)
+importFrom(antaresRead,api_get)
+importFrom(antaresRead,api_post)
+importFrom(antaresRead,api_put)
 importFrom(antaresRead,getAreas)
 importFrom(antaresRead,getLinks)
 importFrom(antaresRead,readBindingConstraints)
@@ -106,10 +110,7 @@ importFrom(data.table,transpose)
 importFrom(data.table,yday)
 importFrom(data.table,year)
 importFrom(grDevices,col2rgb)
-importFrom(httr,DELETE)
-importFrom(httr,GET)
 importFrom(httr,POST)
-importFrom(httr,PUT)
 importFrom(httr,accept_json)
 importFrom(httr,add_headers)
 importFrom(httr,content)
