--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(adequacyOptions)
 export(backupStudy)
 export(checkRemovedArea)
 export(clearScenarioBuilder)
+export(computeOtherFromHourlyMulti)
 export(computeTimeStampFromHourly)
 export(copyOutput)
 export(createArea)
@@ -79,6 +80,7 @@ export(writeWaterValues)
 import(doParallel)
 import(parallel)
 import(pbapply)
+import(progressr)
 importFrom(antaresRead,api_delete)
 importFrom(antaresRead,api_get)
 importFrom(antaresRead,api_post)
@@ -111,6 +113,8 @@ importFrom(data.table,setnames)
 importFrom(data.table,transpose)
 importFrom(data.table,yday)
 importFrom(data.table,year)
+importFrom(doFuture,registerDoFuture)
+importFrom(future,plan)
 importFrom(grDevices,col2rgb)
 importFrom(httr,POST)
 importFrom(httr,accept_json)
@@ -121,6 +125,8 @@ importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(plyr,ldply)
+importFrom(plyr,llply)
 importFrom(stats,as.formula)
 importFrom(stats,sd)
 importFrom(stats,setNames)
