--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(writeOutputValues)
 export(writeSeriesPrepro)
 export(writeVariantCommands)
 export(writeWaterValues)
+import(data.table)
 import(doParallel)
 import(parallel)
 import(pbapply)
