--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(activateRES)
 export(adequacyOptions)
 export(backupStudy)
 export(checkRemovedArea)
+export(cleanUpOutput)
 export(clearScenarioBuilder)
 export(computeOtherFromHourlyMulti)
 export(computeTimeStampFromHourly)
