--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ importFrom(httr,status_code)
 importFrom(httr,stop_for_status)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(memuse,Sys.meminfo)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
 importFrom(stats,as.formula)
