--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(backupStudy)
 export(checkRemovedArea)
 export(clearScenarioBuilder)
 export(computeTimeStampFromHourly)
+export(convertConfigToAdq)
 export(copyOutput)
 export(createArea)
 export(createBindingConstraint)
