--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,3 +135,4 @@ importFrom(utils,tar)
 importFrom(utils,unzip)
 importFrom(utils,write.table)
 importFrom(whisker,whisker.render)
+importFrom(yaml,read_yaml)
