--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,10 @@
-pandoc: '2.18'
-pkgdown: 2.0.6
+pandoc: 2.11.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   antaresEditObject: antaresEditObject.html
   api-variant-management: api-variant-management.html
   renewables-energy-sources: renewables-energy-sources.html
   scenario-builder: scenario-builder.html
-last_built: 2022-08-02T11:47Z
+last_built: 2023-03-10T17:04Z
 
