--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(createPSP)
 export(createStudy)
 export(createStudyAPI)
 export(createVariant)
+export(deleteStudy)
 export(dicoGeneralSettings)
 export(dicoOptimizationSettings)
 export(editArea)
