new function : import study from disk to web

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(computeOtherFromHourlyYear)
 export(computeTimeStampFromHourly)
 export(convertConfigToAdq)
 export(copyOutput)
+export(copyStudyWeb)
 export(createArea)
 export(createBindingConstraint)
 export(createBindingConstraintBulk)
