BULK : ajout fonction bulk pour cluster thermal + tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,antares.api.command)
 S3method(print,antares.api.commands)
 S3method(print,antares.api.logs)
+export(.createClusterBulk)
 export(activateRES)
 export(adequacyOptions)
 export(backupStudy)
@@ -18,6 +19,7 @@ export(createArea)
 export(createBindingConstraint)
 export(createBindingConstraintBulk)
 export(createCluster)
+export(createClusterBulk)
 export(createClusterRES)
 export(createDSR)
 export(createDistrict)
