--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(updateOutputSettings)
 export(updateScenarioBuilder)
 export(useVariant)
 export(writeEconomicOptions)
+export(writeHydroValues)
 export(writeIni)
 export(writeIniAPI)
 export(writeIniFile)
