--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(createArea)
 export(createBindingConstraint)
 export(createBindingConstraintBulk)
 export(createCluster)
+export(createClusterBulk)
 export(createClusterRES)
 export(createDSR)
 export(createDistrict)
