dev script st_storage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(createBindingConstraint)
 export(createBindingConstraintBulk)
 export(createCluster)
 export(createClusterRES)
+export(createClusterST)
 export(createDSR)
 export(createDistrict)
 export(createLink)
