createClusterST fix error + tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Authors@R: c(
     person("Etienne", "Sanchez", role = "ctb"),
     person("Janus", "De Bondt", role = "ctb"),
     person("Assil", "Mansouri", role = "ctb"),
+    person("Abdallah", "Mahoudi", role = "ctb"),
     person("RTE", role = "cph"))
 Description: Edit an 'Antares' simulation before running it : create new areas, links, thermal
     clusters or binding constraints or edit existing ones. Update 'Antares' general & optimization settings.
