createBindingConstraint add function to check dimension of value for every group

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(getJobLogs)
 export(getJobs)
 export(getPlaylist)
 export(getVariantCommands)
+export(group_values_check)
 export(is_antares_v7)
 export(is_antares_v820)
 export(mockSimulationAPI)
