createStudy and createArea for 8.6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,antares.api.command)
 S3method(print,antares.api.commands)
 S3method(print,antares.api.logs)
 export(activateRES)
+export(activateST)
 export(adequacyOptions)
 export(backupStudy)
 export(checkRemovedArea)
