--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeClusterRES)
+export(removeClusterST)
 export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
