editClusterST add function + tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(editArea)
 export(editBindingConstraint)
 export(editCluster)
 export(editClusterRES)
+export(editClusterST)
 export(editDSR)
 export(editLink)
 export(editPSP)
