--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(createBindingConstraintBulk)
 export(createCluster)
 export(createClusterBulk)
 export(createClusterRES)
+export(createClusterST)
 export(createDSR)
 export(createDistrict)
 export(createLink)
@@ -36,6 +37,7 @@ export(editArea)
 export(editBindingConstraint)
 export(editCluster)
 export(editClusterRES)
+export(editClusterST)
 export(editDSR)
 export(editLink)
 export(editPSP)
@@ -59,6 +61,7 @@ export(removeArea)
 export(removeBindingConstraint)
 export(removeCluster)
 export(removeClusterRES)
+export(removeClusterST)
 export(removeLink)
 export(runSimulation)
 export(runTsGenerator)
